examples/ingress.yaml
# An Ingress with 2 hosts and 3 endpoints
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echomap
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /foo
        pathType: ImplementationSpecific
        backend:
          service:
            name: echoheaders-x
            port:
              number: 80
  - host: bar.baz.com
    http:
      paths:
      - path: /bar
        pathType: ImplementationSpecific
        backend:
          service:
            name: echoheaders-y
            port:
              number: 80
      - path: /foo
        pathType: ImplementationSpecific
        backend:
          service:
            name: echoheaders-x
            port:
              number: 80
